<resources>
    <string name="app_name">Navara</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_account">New account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="background_ai_image">Background AI Image</string>
    <string name="create_an_account">Create an account</string>
    <string name="continue_text">Continue</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="login_link">Login</string>
    <string name="apple_icon">Apple Icon</string>
    <string name="google_icon">Google Icon</string>
    <string name="welcome_title">Safe Travel for\nEveryone</string>
    <string name="welcome_subtitle">Find the safest routes with easy access\nto hospitals, smooth roads, and clean facilities.</string>
    <string name="get_started">Get started</string>
    <string name="search_hint">Search</string>
    <string name="browse_by_activity">Browse by activity</string>
    <string name="search_your_place">Search your place</string>
</resources>